tests/run/error_match_nonenum.out
tests/run/error_match_nonenum.ig:4:5: error: 'match' requires an enum value
